# routes/api.php
@@ -39,6 +39,7 @@ Route::group(['middleware' => ['auth.jwt','jsonify']], function () {
     Route::delete('product/{id}', 'Api\ProductCtrl@destroy');
     Route::get('product_bycategory/{category_id}', 'Api\ProductCtrl@product_bycategory');
     Route::get('product_bycategoryseller/{category_id}', 'Api\ProductCtrl@product_bycategoryseller');
+    Route::get('product_image/{id}', 'Api\ProductCtrl@productImage');
 
     // Brands
     Route::get('brands', 'Api\BrandCtrl@index');
